--- a/SimpleApplication/src/App.css
+++ b/SimpleApplication/src/App.css
@@ -46,16 +46,12 @@ body {
         background-color: rgba(62, 62, 62, 1);
         font-size: 125%;
     }
-    .logo {
-        margin-left: 5%;
-        padding-top: 5px;
-        width: 166.6px;
-        height: 50px;
+    .logo { 
+        float:left;
     }
     .topnav img {
         width: 166.6px;
         height: 50px;
-        float: left;
     }
     .menu {
         display: none;
@@ -63,10 +59,10 @@ body {
     .dropdown {
         display: inline-block;
         margin-top: 0%;
+        position: relative;
     }
     #icon {
         cursor: pointer;
-        margin-bottom: 5px;
         padding: 10px;
         padding-right: 20px;
         display: inline-block;
@@ -102,7 +98,6 @@ body {
     }
     .logo {
         margin-left: 5%;
-        padding-top: 5px;
     }
     .topnav img {
         width: 208.3px;
@@ -124,7 +119,7 @@ body {
 @media only screen and (min-width: 992px) {
     .topnav {
         font-size: 150%;
-        background-color: rgba(62, 62, 62, 0.6);
+        background-color: rgba(62, 62, 62, 0.8);
     }
     .logo {
         margin-left: 15%;
