--- a/SimpleApplication/src/Components/Listen/ListofRooms/ListofRooms.css
+++ b/SimpleApplication/src/Components/Listen/ListofRooms/ListofRooms.css
@@ -1,70 +1,14 @@
-#container {
-    top: 0;
-    left: 0;
-    height:92vh;
-    width: 100%;
-    position: relative;
-}
-
-#content{
-    margin-left: 5%;
-    margin-right: 5%;
-    color: black;
-    bottom:80px;
-    top: 0; bottom: 80;
-    position:absolute;
-    width: 90%;
-    overflow:auto;
-}
-
-#leftbar{
+#roomlist{
+    overflow-x:hidden;
+    overflow-y: auto;
     height: 100%;
-    vertical-align: top;
-    background-color: rgba(62, 62, 62, 1);
-}
-
-#center{
-    height: 100%;
-    vertical-align: top;
-    background-color: rgba(62, 62, 62, 1);
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    background-image: url('./icons/hms-roomback.png');
+    background-repeat: no-repeat;
+    background-size: 90%;
+    background-position: center;
+    background-color:white;
     text-align: center;
 }
-
-#center button{
-    margin: 0 auto;
-    width: 60%;
-    margin-top: 60%;
-    padding: 20px;
-    background-color: #00b8ff;
-    color: rgba(62, 62, 62, 1);
-    border: 1px solid white;
-    font-size:120%;
-    font-weight: bold;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-#center button:hover{
-    margin: 0 auto;
-    margin-top: 60%;
-    width: 60%;
-    top:10%;
-    padding: 20px;
-    background-color: #00b8ff;
-    color: rgba(62, 62, 62, 1);
-    border: 1px solid white;
-    font-size:120%;
-    font-weight: 800;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-#rightbar{
-    height: 100%;
-    vertical-align: top;
-    background-color: rgba(62, 62, 62, 1);
-}
-
 
 .roombuttons{
     background-color: white;
